<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_ash"
    android:orientation="vertical"
    tools:ignore="UnusedAttribute">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center"
        app:title="Add Medicine Alert"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:padding="8dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/pill_accent"
            android:elevation="4dp"
            android:paddingBottom="8dp">

            <EditText
                android:id="@+id/etMedNameEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:hint="@string/txtMedNameEntry"
                android:maxLength="32"
                android:maxLines="1"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white_blurry"
                android:textSize="24sp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTimeEntry"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="5"
                android:background="@drawable/pill_time"
                android:drawableLeft="@drawable/ic_access_time_white_18dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_access_time_white_18dp"
                android:elevation="4dp"
                android:gravity="center_vertical"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/tvTimeEntry"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/switchMedAlert"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:padding="8dp"
                android:visibility="gone" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <CheckBox
                    android:id="@+id/checkbox_everyday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    android:text="@string/everyday"
                    android:textSize="22sp" />

                <CheckBox
                    android:id="@+id/checkbox_saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    android:text="@string/saturday"
                    android:textSize="22sp" />

                <CheckBox
                    android:id="@+id/checkbox_sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    android:text="@string/sunday"
                    android:textSize="22sp" />

                <CheckBox
                    android:id="@+id/checkbox_monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    android:text="@string/monday"
                    android:textSize="22sp" />

                <CheckBox
                    android:id="@+id/checkbox_tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    android:text="@string/tuesday"
                    android:textSize="22sp" />

                <CheckBox
                    android:id="@+id/checkbox_wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    android:text="@string/wednesday"
                    android:textSize="22sp" />

                <CheckBox
                    android:id="@+id/checkbox_thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    android:text="@string/thursday"
                    android:textSize="22sp" />

                <CheckBox
                    android:id="@+id/checkbox_friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    android:text="@string/friday"
                    android:textSize="22sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSaveMedAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_save_white_24dp" />

</android.support.design.widget.CoordinatorLayout>