<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvMedicineName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:padding="16dp"
        android:text="@string/app_name"
        android:textColor="@color/black_87_percent"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTimeMedAlert"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/pill_time"
            android:drawableLeft="@drawable/ic_access_time_white_18dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_access_time_white_18dp"
            android:paddingBottom="4dp"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingStart="12dp"
            android:paddingTop="4dp"
            android:text="@string/monday"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/switchMedAlertItem"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="8dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/ivDeleteMedAlert"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/delete_medicine_alert"
            android:src="@drawable/ic_delete_forever_red_700_24dp" />

    </LinearLayout>

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:flexWrap="wrap">

        <TextView
            android:id="@+id/tvSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/pill_accent"
            android:paddingBottom="4dp"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingStart="12dp"
            android:paddingTop="4dp"
            android:text="@string/saturday"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/pill_accent"
            android:paddingBottom="4dp"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingStart="12dp"
            android:paddingTop="4dp"
            android:text="@string/sunday"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/pill_accent"
            android:paddingBottom="4dp"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingStart="12dp"
            android:paddingTop="4dp"
            android:text="@string/monday"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/pill_accent"
            android:paddingBottom="4dp"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingStart="12dp"
            android:paddingTop="4dp"
            android:text="@string/tuesday"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/pill_accent"
            android:paddingBottom="4dp"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingStart="12dp"
            android:paddingTop="4dp"
            android:text="@string/wednesday"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/pill_accent"
            android:paddingBottom="4dp"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingStart="12dp"
            android:paddingTop="4dp"
            android:text="@string/thursday"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/pill_accent"
            android:paddingBottom="4dp"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingStart="12dp"
            android:paddingTop="4dp"
            android:text="@string/friday"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </com.google.android.flexbox.FlexboxLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="32dp"
        android:background="@color/divider" />

</LinearLayout>